# robin-open

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: rfc.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good-first-issue.yml
.github/workflows/: ci.yml  package-verify.yml  publish.yml
.pytest_cache/v/cache/: nodeids
docs/: CASE-STUDY.md  COMMUNITY.md  GROWTH.md  OPERATIONS-DASHBOARD.md  PYPI.md
examples/: __init__.py  openai_compatible.py  quickstart.py  trace_demo.py
robin_open/: __init__.py  cli.py  demo.py  providers.py  runtime.py
tests/: test_demo.py  test_runtime.py
